--- a/index.html
+++ b/index.html
@@ -8,53 +8,57 @@
 </head>
 <body>
 <header>
-    <!--slider goes here-->
     <div id="navbar">
-        <div id="laptop">
-        <img src="images/laptop.png" alt="Axis Learning">
-        </div>
         <ul id="menu">
             <li><a href="#">Home</a></li>
             <li><a href="#">About</a></li>
+            <li>
+                <div>
+                    <img id="laptop-img" src="images/imac.png" alt="Axis Learning">
+                    <img id="temp1" src="images/Axis-full-hq.png" alt="random">
+                    <img id="screen-shade" src="images/mac-shade.png" alt="shade">
+                </div>
+            </li>
             <li><a href="#">Courses</a></li>
             <li><a href="#">Contact Us</a></li>
         </ul>
 
     </div>
 </header>
-<div id="text-1">
-    <h2>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam amet assumenda commodi consectetur culpa
-        dignissimos doloribus earum eos esse et facilis id in labore magni minima necessitatibus nulla officia, officiis
-        pariatur perferendis quos ratione reiciendis repudiandae temporibus ullam velit vero! At blanditiis ipsum
-        nesciunt quo repellendus soluta vitae?</h2>
-</div>
-<div id="learning">
-    <h1>learning made easy</h1>
-    <div id="learning-grid">
-        <ul>
-            <li><img src="images/temp1.png" alt=""></li>
-            <li><img src="images/temp1.png" alt=""></li>
-            <li><img src="images/temp1.png" alt=""></li>
-        </ul>
-        <button> Get Started</button>
+<div id="slider">
+    <div id="text-1">
+        <h2>Axis Learning is an institute for everyone who wants to improve professionally and wants to excel in the field of their interest.</h2>
     </div>
 </div>
 
-<div id="text-2">
-    <h2>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A blanditiis cum, doloribus ducimus enim fugiat hic
-        illum ipsa neque praesentium quis rem sunt voluptatibus! Accusamus adipisci assumenda dicta dolore doloremque
-        earum laudantium modi molestias natus nemo officiis provident quaerat quia quisquam recusandae sed totam vel,
-        voluptatum. Modi mollitia vel voluptatibus!</h2>
+<div id="learning">
+    <h1>Learning made easy!</h1>
+    <div id="learning-grid">
+        <ul>
+            <li><img src="images/learn/book-reading2.jpg" alt=""><h2>Learn</h2></li>
+            <li><img src="images/learn/grow.jpg" alt=""><h2>Grow</h2></li>
+            <li><img src="images/learn/collaborate.jpg" alt=""><h2>Collaborate</h2></li>
+        </ul>
+        <button id="get-started"> Get Started</button>
+    </div>
 </div>
+<div id="picture-text">
+    <img src="images/text-pic.jpg" alt="Axis Learning">
+    <div id="text-2">
+        <h2>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A blanditiis cum, doloribus ducimus enim fugiat hic
+            illum ipsa neque praesentium quis rem sunt voluptatibus!</h2>
+    </div>
+</div>
+
 <div id="courses">
-    <h1>courses</h1>
+    <h1>Courses</h1>
     <div id="course-view">
         <ul>
-            <li><a href="#"><img src="images/temp1.png" alt="#"></a></li>
-            <li><a href="#"><img src="images/temp1.png" alt="#"></a></li>
-            <li><a href="#"><img src="images/temp1.png" alt="#"></a></li>
+            <li><a href="#"><img src="images/icons courses/graphic designing.png" alt="#"></a></li>
+            <li><a href="#"><img src="images/icons courses/web dev.png" alt="#"></a></li>
+            <li><a href="#"><img src="images/icons courses/digital marketing.png" alt="#"></a></li>
         </ul>
-    <button>See More</button>
+    <button id="see-more">See More</button>
     </div>
 </div>
 <footer>
