fixing imac and inside images

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <li>
                 <div>
                     <img id="laptop-img" src="images/imac.png" alt="Axis Learning">
-                    <img id="temp1" src="images/Axis-full-hq.png" alt="random">
+                    <img id="temp1" src="images/axis-logo.png" alt="random">
                     <img id="screen-shade" src="images/mac-shade.png" alt="shade">
                 </div>
             </li>
@@ -43,7 +43,7 @@
     </div>
 </div>
 <div id="picture-text">
-    <img src="images/text-pic.jpg" alt="Axis Learning">
+    <img src="images/learn/text-pic.jpg" alt="Axis Learning">
     <div id="text-2">
         <h2>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A blanditiis cum, doloribus ducimus enim fugiat hic
             illum ipsa neque praesentium quis rem sunt voluptatibus!</h2>
