--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Axis Learning</title>
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="fonts.css">
+    <link rel="stylesheet" href="media.css">
 </head>
 <body>
 <header>
@@ -35,9 +36,9 @@
     <h1>Learning made easy!</h1>
     <div id="learning-grid">
         <ul>
-            <li><img src="images/learn/book-reading2.jpg" alt=""><h2>Learn</h2></li>
-            <li><img src="images/learn/grow.jpg" alt=""><h2>Grow</h2></li>
-            <li><img src="images/learn/collaborate.jpg" alt=""><h2>Collaborate</h2></li>
+            <li><img src="images/learn/book-reading2.jpg" alt=""><h3>Learn</h3></li>
+            <li><img src="images/learn/grow.jpg" alt=""><h3>Grow</h3></li>
+            <li><img src="images/learn/collaborate.jpg" alt=""><h3>Collaborate</h3></li>
         </ul>
         <button id="get-started"> Get Started</button>
     </div>
