--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
     <h1>Learning made easy!</h1>
     <div id="learning-grid">
         <ul>
-            <li><img src="images/learn/book-reading2.jpg" alt=""><h3>Learn</h3></li>
-            <li><img src="images/learn/grow.jpg" alt=""><h3>Grow</h3></li>
-            <li><img src="images/learn/collaborate.jpg" alt=""><h3>Collaborate</h3></li>
+            <li><img src="images/learn.jpg" alt=""><h3>Learn</h3></li>
+            <li><img src="images/chart.jpg" alt=""><h3>Grow</h3></li>
+            <li><img src="images/fist-bumb.jpg" alt=""><h3>Collaborate</h3></li>
         </ul>
         <button id="get-started"> Get Started</button>
     </div>
