--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <title>Axis Learning</title>
     <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="mobile-index.css">
     <link rel="stylesheet" href="fonts.css">
     <link rel="stylesheet" href="media.css">
+
 </head>
 <body>
 <header>
@@ -23,9 +25,30 @@
             <li><a href="#">Courses</a></li>
             <li><a href="#">Contact Us</a></li>
         </ul>
-
     </div>
 </header>
+<div id="mobile-navbar">
+    <ul id="mobile-menu">
+        <li><a href="#"><img id="logo" src="images/Axis-full-hq.png" alt="#"></a></li>
+        <li id="hamburger">
+            <input type="checkbox" id="btnControl" onclick="menuSlidesIn()"/>
+            <label for="btnControl" id="label-hamburger">
+            <div class="menu-burger"></div>
+            <div class="menu-burger"></div>
+            <div class="menu-burger"></div>
+            </label>
+        </li>
+    </ul>
+</div>
+<div id="menu-bar">
+    <ul id="menu-options">
+        <li><a href="#">Home</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Courses</a></li>
+        <li><a href="#">Contact Us</a></li>
+    </ul>
+</div>
+
 <div id="slider">
     <div id="text-1">
         <h2>Axis Learning is an institute for everyone who wants to improve professionally and wants to excel in the field of their interest.</h2>
@@ -40,7 +63,7 @@
             <li><img src="images/chart.jpg" alt=""><h3>Grow</h3></li>
             <li><img src="images/fist-bumb.jpg" alt=""><h3>Collaborate</h3></li>
         </ul>
-        <button id="get-started"> Get Started</button>
+        <button id="get-started">Get Started</button>
     </div>
 </div>
 <div id="picture-text">
@@ -66,4 +89,5 @@
     <p>2019 Copyright Axis Learning</p>
 </footer>
 </body>
+<script src="index.js"></script>
 </html>
