--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 </header>
 <div id="mobile-navbar">
     <ul id="mobile-menu">
-        <li><a href="#"><img id="logo" src="images/Axis-full-hq.png" alt="#"></a></li>
+        <li id="logo-li"><a href="#"><img id="logo" src="images/Axis-full-hq.png" alt="#"></a></li>
         <li id="hamburger">
             <input type="checkbox" id="btnControl" onclick="menuSlidesIn()"/>
             <label for="btnControl" id="label-hamburger">
