--- a/index.html
+++ b/index.html
@@ -86,6 +86,16 @@
     </div>
 </div>
 <footer>
+    <div id="parent">
+    <div id="footer-logo"><img src="images/Axis-full-hq.png" alt=""></div>
+    <div id="footer-content">
+        <p><span class="boldit">Address: </span>Johar Town, Lahore, Pakistan</p>
+        <p><span class="boldit">Contact 1: </span>0331 1234567</p>
+        <p><span class="boldit">Contact 2: </span>0331 1234567</p>
+        <p><span class="boldit">Email: </span>lorem_ipsum@gmail.com</p>
+    </div>
+    </div>
+    <hr>
     <p>2019 Copyright Axis Learning</p>
 </footer>
 </body>
