--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="mobile-index.css">
     <link rel="stylesheet" href="fonts.css">
     <link rel="stylesheet" href="media.css">
-
+    <script src="https://kit.fontawesome.com/d73f645a4a.js"></script>
 </head>
 <body>
 <header>
@@ -89,10 +89,10 @@
     <div id="parent">
     <div id="footer-logo"><img src="images/Axis-full-hq.png" alt=""></div>
     <div id="footer-content">
-        <p><span class="boldit">Address: </span>Johar Town, Lahore, Pakistan</p>
-        <p><span class="boldit">Contact 1: </span>0331 1234567</p>
-        <p><span class="boldit">Contact 2: </span>0331 1234567</p>
-        <p><span class="boldit">Email: </span>lorem_ipsum@gmail.com</p>
+        <p><span class="boldit"><i class="fas fa-map-marker-alt" style="color: #ff852b"></i></span> Johar Town, Lahore, Pakistan</p>
+        <p><span class="boldit"><i class="fas fa-phone-alt" style="color: #ff852b"></i></span> 0331 1234567</p>
+        <p><span class="boldit"><i class="fas fa-phone-alt" style="color: #ff852b"></i></span> 0331 1234567</p>
+        <p><span class="boldit"><i class="fas fa-envelope" style="color: #ff852b"></i></span> lorem_ipsum@gmail.com</p>
     </div>
     </div>
     <hr>
