mobile version meta tag adjustment

--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Axis Learning</title>
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="mobile-index.css">
     <link rel="stylesheet" href="fonts.css">
     <link rel="stylesheet" href="media.css">
-    <script src="https://kit.fontawesome.com/d73f645a4a.js"></script>
+    <!--<script src="https://kit.fontawesome.com/d73f645a4a.js"></script>-->
 </head>
 <body>
 <header>
@@ -59,18 +60,21 @@
     <h1>Learning made easy!</h1>
     <div id="learning-grid">
         <ul>
-            <li><img src="images/learn.jpg" alt=""><h3>Learn</h3></li>
+            <li><img src="images/learning-book.jpg" alt=""><h3>Learn</h3></li>
             <li><img src="images/chart.jpg" alt=""><h3>Grow</h3></li>
             <li><img src="images/fist-bumb.jpg" alt=""><h3>Collaborate</h3></li>
         </ul>
         <button id="get-started">Get Started</button>
     </div>
 </div>
-<div id="picture-text">
-    <img src="images/learn/text-pic.jpg" alt="Axis Learning">
-    <div id="text-2">
-        <h2>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A blanditiis cum, doloribus ducimus enim fugiat hic
-            illum ipsa neque praesentium quis rem sunt voluptatibus!</h2>
+<div id="picture-text-cont">
+    <div id="picture-text">
+        <img src="images/learn/text-pic.jpg" alt="Axis Learning">
+        <div id="text-2">
+            <h2>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A blanditiis cum, doloribus ducimus enim
+                fugiat hic
+                illum ipsa neque praesentium quis rem sunt voluptatibus!</h2>
+        </div>
     </div>
 </div>
 
@@ -89,10 +93,10 @@
     <div id="parent">
     <div id="footer-logo"><img src="images/Axis-full-hq.png" alt=""></div>
     <div id="footer-content">
-        <p><span class="boldit"><i class="fas fa-map-marker-alt" style="color: #ff852b"></i></span> Johar Town, Lahore, Pakistan</p>
-        <p><span class="boldit"><i class="fas fa-phone-alt" style="color: #ff852b"></i></span> 0331 1234567</p>
-        <p><span class="boldit"><i class="fas fa-phone-alt" style="color: #ff852b"></i></span> 0331 1234567</p>
-        <p><span class="boldit"><i class="fas fa-envelope" style="color: #ff852b"></i></span> lorem_ipsum@gmail.com</p>
+        <p><span class="boldit">Address: </span>Johar Town, Lahore, Pakistan</p>
+        <p><span class="boldit">Contact 1: </span> 0331 1234567</p>
+        <p><span class="boldit">Contact 2: </span>0331 1234567</p>
+        <p><span class="boldit">Email: </span>lorem_ipsum@gmail.com</p>
     </div>
     </div>
     <hr>
