menu options a font size

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 <header>
     <div id="navbar">
         <ul id="menu">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
+            <li><a href="home.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
             <li>
                 <div>
                     <img id="laptop-img" src="images/imac.png" alt="Axis Learning">
@@ -23,14 +23,14 @@
                     <img id="screen-shade" src="images/mac-shade.png" alt="shade">
                 </div>
             </li>
-            <li><a href="#">Courses</a></li>
-            <li><a href="#">Contact Us</a></li>
+            <li><a href="courses.html">Courses</a></li>
+            <li><a href="contact.html">Contact Us</a></li>
         </ul>
     </div>
 </header>
 <div id="mobile-navbar">
     <ul id="mobile-menu">
-        <li id="logo-li"><a href="#"><img id="logo" src="images/Axis-full-hq.png" alt="#"></a></li>
+        <li id="logo-li"><a href="index.html"><img id="logo" src="images/Axis-full-hq.png" alt="#"></a></li>
         <li id="hamburger">
             <input type="checkbox" id="btnControl" onclick="menuSlidesIn()"/>
             <label for="btnControl" id="label-hamburger">
@@ -42,10 +42,10 @@
     </ul>
     <div id="menu-bar">
         <ul id="menu-options">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Courses</a></li>
-            <li><a href="#">Contact Us</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="courses.html">Courses</a></li>
+            <li><a href="contact.html">Contact Us</a></li>
         </ul>
     </div>
 </div>
