--- a/courses.html
+++ b/courses.html
@@ -16,7 +16,7 @@
 <header>
     <div id="navbar">
         <ul id="menu">
-            <li><a href="home.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li>
                 <div>
@@ -52,7 +52,96 @@
     </div>
 </div>
 
-
+<div id="main-courses">
+    <h1 id="course-heading">COURSES</h1>
+    <ul id="course-list">
+        <li class="client-card">
+            <img src="images/icons%20courses/digital%20marketing.png" alt="Digital Marketing">
+            <h2>Digital Marketing</h2>
+            <!--<h3>6.3m</h3>-->
+            <p>“The best marketing doesn’t feel like marketing.”–Tom Fishburne</p>
+            <a href="#">Learn More</a>
+        </li>
+        <li class="client-card">
+            <img src="images/icons%20courses/graphic%20designing.png" alt="Graphic Designing">
+            <h2>Graphic Designing</h2>
+            <!--<h3>6.3m</h3>-->
+            <p>“Digital design is like painting, except the paint never dries.”-Neville Brody</p>
+            <a href="#">Learn More</a>
+        </li>
+        <li class="client-card">
+            <img src="images/icons%20courses/wordpress.png" alt="WordPress">
+            <h2>WordPress</h2>
+            <!--<h3>6.3m</h3>-->
+            <p>“Website without visitors is like a ship lost in the horizon.”-Dr. Christopher Dayagdag</p>
+            <a href="#">Learn More</a>
+        </li>
+        <li class="client-card">
+            <img src="images/icons%20courses/web%20dev.png" alt="Web Development">
+            <h2>Web Development</h2>
+            <!--<h3>6.3m</h3>-->
+            <p>“What separates design from art is that design is meant to be... functional.”-Cameron Moll</p>
+            <a href="#">Learn More</a>
+        </li>
+        <li class="client-card">
+            <img src="images/icons%20courses/seo.png" alt="Search Engine Optimization(SEO)">
+            <h2>SEO</h2>
+            <!--<h3>6.3m</h3>-->
+            <p>“Today it’s not about ‘get the traffic’ — it’s about ‘get the targeted and relevant traffic.”-Adam
+                Audette</p>
+            <a href="#">Learn More</a>
+        </li>
+        <li class="client-card">
+            <img src="images/icons%20courses/android%20(1).png" alt="Android Development">
+            <h2>Android Development</h2>
+            <!--<h3>6.3m</h3>-->
+            <p>“Your mobile device has quickly become the easiest portal into your digital self.”-Phil Nickins</p>
+            <a href="#">Learn More</a>
+        </li>
+        <li class="client-card">
+            <img src="images/icons%20courses/3d-animation.png" alt="3D Animation & Designing">
+            <h2>3D Animation & Designing</h2>
+            <!--<h3>6.3m</h3>-->
+            <p>“Animation is imagination.”-Dan</p>
+            <a href="#">Learn More</a>
+        </li>
+        <li class="client-card">
+            <img src="images/icons%20courses/excel.png" alt="Advance Excel">
+            <h2>Advance Excel</h2>
+            <!--<h3>6.3m</h3>-->
+            <p>"There can be no rise in the value of labour without a fall of profits"-David Ricardo</p>
+            <a href="#">Learn More</a>
+        </li>
+        <li class="client-card">
+            <img src="images/icons%20courses/quickbooks.png" alt="Quickbooks">
+            <h2>Quickbooks</h2>
+            <!--<h3>6.3m</h3>-->
+            <p>“Time is more value than money. You can get more money, but you cannot get more time.”-Jim Rohn</p>
+            <a href="#">Learn More</a>
+        </li>
+        <li class="client-card">
+            <img src="images/icons%20courses/spoken%20english.png" alt="Spoken English & Personality Development">
+            <h2>Spoken English</h2>
+            <!--<h3>6.3m</h3>-->
+            <p>"Learning is not a spectator sport."-D. Blocher</p>
+            <a href="#">Learn More</a>
+        </li>
+        <li class="client-card">
+            <img src="images/icons%20courses/freelancing.png" alt="Freelancing">
+            <h2>Freelancing</h2>
+            <!--<h3>6.3m</h3>-->
+            <p>“The supreme accomplishment is to blur the line between work and play.”-Arnold J. Toynbee</p>
+            <a href="#">Learn More</a>
+        </li>
+        <li class="client-card">
+            <img src="images/icons%20courses/language%20courses.png" alt="Language Courses">
+            <h2>Language Courses</h2>
+            <!--<h3>6.3m</h3>-->
+            <p>"The art of communication is the language of leadership."-James Humes</p>
+            <a href="#">Learn More</a>
+        </li>
+    </ul>
+</div>
 
 <footer>
     <div id="parent">
