--- a/contact.html
+++ b/contact.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="mobile-index.css">
     <link rel="stylesheet" href="fonts.css">
+    <link rel="stylesheet" href="contact.css">
     <link rel="stylesheet" href="media.css">
 </head>
 <body>
