--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <header>
     <div id="navbar">
         <ul id="menu">
-            <li><a href="home.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li>
                 <div>
@@ -64,7 +64,7 @@
             <li><img src="images/chart.jpg" alt=""><h3>Grow</h3></li>
             <li><img src="images/fist-bumb.jpg" alt=""><h3>Collaborate</h3></li>
         </ul>
-        <button id="get-started">Get Started</button>
+        <a href="courses.html" id="get-started">Get Started</a>
     </div>
 </div>
 <div id="picture-text-cont">
@@ -86,7 +86,8 @@
             <li><a href="#"><img src="images/icons courses/web dev.png" alt="#"></a></li>
             <li><a href="#"><img src="images/icons courses/digital marketing.png" alt="#"></a></li>
         </ul>
-        <button id="see-more">See More</button>
+        <a href="courses.html" id="see-more">See More</a>
+        <!--<a href="#" id="see-more">See More</a>-->
     </div>
 </div>
 <footer>
